--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"lite-server": "^2.3.0"
 	},
 	"dependencies": {
-		"bootstrap": "^4.1.2"
+		"bootstrap": "^4.1.2",
+		"jquery": "^3.3.1"
 	}
 }
